--- a/public_html/style/style.css
+++ b/public_html/style/style.css
@@ -10,6 +10,8 @@ img{
 #react{
 	color: #00D2F8;
 }
+.navbar{background-color:#1C2331}
+
 
 #envelope{
 	margin-left: 20px;
@@ -77,4 +79,27 @@ input[type=text],textarea{
 	margin-left: 18px;
 	width: 100px;
 	padding-left: 25px;
+}
+#nav-bar{
+	color: #cccccc;
+	/*background: transparent;*/
+	opacity: 0.5;
+}
+a.button {
+	margin: 0 auto;
+	padding: 1rem;
+	background: linear-gradient(135deg, var(--a), var(--c), var(--b));
+	color: var(--f);
+	text-decoration: none;
+}
+
+.glowy {
+	box-shadow: inset 0 0 20px transparent, 0 0 20px transparent;
+	text-shadow: 1px 1px 2px transparent;
+	transition: all 1250ms 100ms cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.glowy:hover {
+	box-shadow: inset 0 0 20px var(--a), 0 0 20px #ffef34;
+	text-shadow: 1px 1px 2px #ffef34;
 }
