--- a/public_html/style/style.css
+++ b/public_html/style/style.css
@@ -16,7 +16,9 @@ img{
 #envelope{
 	margin-left: 20px;
 }
-
+#css{
+	color: #4c4cea;
+}
 #js,#java{
 	color: red;
 }
@@ -29,13 +31,13 @@ img{
 }
 
 .title-underline{
-
-	height: 3px;
-	width: 230px;
+	height: 5px;
+	width: 320px;
 	margin-left: 200px;
 }
 .height{
-	height: 50vh;
+
+	height: 60vh;
 }
 body{font-family: 'Arvo', serif;}
 
@@ -46,14 +48,12 @@ body{font-family: 'Arvo', serif;}
 
 }
 .contact-pic{
-	background: url("../images/h2o.jpg")center/cover no-repeat fixed;;
+	background: url("../images/h2o.jpg")center/cover no-repeat fixed;
 }
-.height-80{
+.height{
 	min-height: 80vh;
 
 }
-
-
 
 .foot{
 	min-height: 10vh;
@@ -85,6 +85,8 @@ input[type=text],textarea{
 	/*background: transparent;*/
 	opacity: 0.5;
 }
+
+/*noel css animation class*/
 a.button {
 	margin: 0 auto;
 	padding: 1rem;
@@ -103,3 +105,8 @@ a.button {
 	box-shadow: inset 0 0 20px var(--a), 0 0 20px #ffef34;
 	text-shadow: 1px 1px 2px #ffef34;
 }
+html {
+	min-width: 550px;
+	position: relative;
+}
+
